2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (about_cb):
	Set the right screen when the user requests
	the about dialog and it's already there
	but not on the right screen.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (destroy_cb): Destroy the eye
	box and GtkWidget eye array.

	(destroy_eyes):
	Free the GtkWidget eye array.

	(setup_eyes):
	Allocate memory for the eye array.

	* geyes.h: Changed GtkWidget *eyes[MAX_EYES] into
	GtkWidget **eyes within the EyesApplet structure.

	Bumped MAX_EYES up to 100 which is basicly sanity
	because themes with such a great number of eyes are
	insane anyway.

	* themes.c (parse_theme_file):
	Check if the eyes in the theme is above MAX_EYES. If
	so set the num_eyes entry to MAX_EYES.

	Fixes bug #106315.

2004-02-22  Dennis Smit  <ds@nerds-incorporated.org>

	* themes.c (theme_dirs_create):
	Added function that fills the theme_directories
	list. Removed the static declaration so themes
	installed in ~/.gnome2/geyes-themes/ works again.

	* themes.h: Added prototype for theme_dirs_create.

	* geyes.c (geyes_applet_factory):
	Call theme_dirs_create.

	Fixes bug #122872.

2004-02-12 Breda McColgan <breda.mccolgan@sun.com>

	* docs/C/geyes.xml: Updated for GNOME 2.6.
	* docs/C/geyes-C.omf: Updated for GNOME 2.6.
	* docs/C/l10n.txt: Updated for GNOME 2.6.

2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-06  Dennis Smit  <ds@nerds-incorporated.org>

	* themes.c: Patch by Kjartan Maraas <kmaraas@gnome.org>
	to cleanup some deprecated glib functions.

2004-02-04  Chee Bin HOH  <cbhoh@gnome.org>

        * themes/Makefile.am: Fix bug #133100 for properly
        installing themes files.

2004-02-01  Dennis Smit  <ds@nerds-incorporated.org>

	* geyes.c (properties_load): Check if the theme didn't have a fatal.
	(create_eyes): Remove properties_load and setup_eyes here and do that