@@ -1,3 +1,13 @@
+2004-02-26  Dennis Smit  <ds@nerds-incorporated.org>
+
+	* geyes.c (applet_back_change):
+	Cleaned up and fixed transparency for color
+	background panels.
+
+	(applet_set_back_pixmap):
+	Cleaned up, trying to get panel pixmap
+	backgrounds working. Still crashes tho.
+
 2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* geyes.c (about_cb):
